# Tannic

./: CMakeLists.txt  README.md  main.cpp  main.sh
include/: tannic.hpp
include/tannic/: environments.hpp  execution.hpp  expressions.hpp  graph.hpp  operations.hpp  tensors.hpp  trace.hpp  types.hpp
src/: execution.cpp  graph.cpp  io.cpp  trace.cpp
